# ansi_colle-linux

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  bootstrap.bash  galaxy.yml  pyproject.toml  requirements.yml  taskfile.dist.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ansible-molecule.yml  gh_pages.yml
playbooks/: install.yml  linux.yml  site.yml  wsl.yml
roles/ansible/meta/: main.yml
roles/ansible/tasks/: main.yml
roles/base/handlers/: main.yml
roles/base/meta/: argument_specs.yml  main.yml
roles/base/tasks/: main.yml
roles/cargo/tasks/: main.yml
roles/dev_tools/tasks/: _fedora.yml  _gpg.yml  main.yml
roles/development/files/: editorconfig
roles/development/handlers/: main.yml
roles/development/meta/: main.yml
roles/development/tasks/: _debian.yml  _fedora.yml  _git.yml  _gpg.yml  main.yml
roles/extra/files/: init.bash
roles/extra/meta/: argument_specs.yml  main.yml
roles/extra/tasks/: main.yml
roles/fish/meta/: argument_specs.yml  main.yml
roles/fish/tasks/: main.yml
roles/flatpak/files/: wezterm.lua
roles/flatpak/meta/: main.yml
roles/flatpak/tasks/: main.yml
roles/gnome/meta/: argument_specs.yml  main.yml
roles/gnome/tasks/: main.yml
roles/golang/handlers/: main.yml
roles/golang/meta/: main.yml
roles/golang/tasks/: main.yml
roles/gui/meta/: main.yml
roles/gui/tasks/: _fedora.yml  main.yml
roles/home/meta/: argument_specs.yml  main.yml
roles/home/tasks/: main.yml
roles/home_config/tasks/: main.yml
roles/kde/meta/: argument_specs.yml  main.yml
roles/kde/tasks/: _debian.yml  _fedora.yml  main.yml
roles/lang/tasks/: main.yml
roles/lazyvim/handlers/: main.yml
roles/lazyvim/meta/: argument_specs.yml  main.yml
roles/lazyvim/tasks/: main.yml
roles/neovim/meta/: main.yml
roles/neovim/tasks/: main.yml
roles/npm/tasks/: main.yml
roles/pnpm/defaults/: main.yml
roles/pnpm/meta/: argument_specs.yml  main.yml
(+17 files in other folders)
