[project]
name = "ansi_colle-linux"
dynamic = ["version"]        # Check galaxy.yml for version
requires-python = "==3.12.*"

description = "Default template for PDM package"
authors = [
  { name = "Chun Pan Yung", email = "31672021+ChunPanYung@users.noreply.github.com" },
]
dependencies = ["ansible>=9.2.0", "tomli-w>=1.0.0"]
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
log = ["git-cliff", "uv"]
test = ["go-task"]
dev = ["ansible-dev-tools", "validate-pyproject", "go-task-bin", "pre-commit"]

[tool.pdm.version]
source = "scm"
